2009-04-21  Bastien Nocera  <hadess@hadess.net>

	* tests/list:
	* tests/test.bflng:
	* tests/test.xhtml: Add a few disable tests for bug #19201

2009-04-20  Bastien Nocera  <hadess@hadess.net>

	* update-mime-database.c (main): Patch from Martin von Gagern
	<Martin.vGagern@gmx.net> to give a better error message when
	a directory doesn't exist (Closes: #20552)

2009-04-20  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/foo.doc:
	* tests/list: And another magic for Word documents, and a test case
	(Closes: #20604)

2009-04-20  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list: Add another magic for Word documents, along with a test
	case update (Closes: #20275)

2009-04-20  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Avoid some .ini files getting detected
	as Cisco VPN configuration files, when they start with "[main]"
	(Closes: #20302)
	* tests/list:
	* tests/menu.ini: Add test case to verify the above

2009-04-20  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/tree-list: Patch from Cosimo Cecchi <cosimoc@gnome.org> to
	separate Win32 from Unix autostart detection (Closes: #20562)

2009-04-17  Pino Toscano  <pino@kde.org>

	* freedesktop.org.xml.in: Add application/x-xz and
	application/x-xz-compressed-tar mimetypes. References for them is at:
	http://tukaani.org/xz/ (http://tukaani.org/xz/xz-file-format.txt).
	Based on a Mandriva patch.
	* tests/good-1-delta-lzma2.tiff.xz: Test data for application/x-xz;
	taken from the XZ test cases in the sources.
	* tests/spinboxes-0.1.1-Linux.tar.xz: Test data for
	application/x-xz-compressed-tar, provided by Helio Chissini de Castro.
	* tests/list: Add test cases to the list.

2009-04-10  David Faure  <faure@kde.org>

	* freedesktop.org.xml.in: Add application/vnd.google-earth.kml+xml
	and application/vnd.google-earth.kmz mimetypes. (Closes: KDE bug #136983)
	* tests/list: