@@ -975,6 +975,21 @@ command to generate the output files.
     <glob pattern="*.wpd"/>
     <glob pattern="*.wpp"/>
   </mime-type>
+  <mime-type type="application/x-spss-por">
+    <_comment>SPSS Portable Data File</_comment>
+    <magic priority="50">
+      <match type="string" offset="40" value="ASCII SPSS PORT FILE"/>
+    </magic>
+    <glob pattern="*.por"/>
+  </mime-type>
+  <mime-type type="application/x-spss-sav">
+    <_comment>SPSS Data File</_comment>
+    <alias type="application/x-spss-savefile"/>
+    <magic priority="50">
+      <match type="string" offset="0" value="$FL2"/>
+    </magic>
+    <glob pattern="*.sav"/>
+  </mime-type>
   <mime-type type="application/x-xbel">
     <_comment>XBEL bookmarks</_comment>
     <acronym>XBEL</acronym>
