@@ -208,3 +208,5 @@ bluerect.mdi image/vnd.ms-modi
 Stallman_Richard_-_The_GNU_Manifesto.fb2 application/x-fictionbook+xml
 test.p7b application/x-pkcs7-certificates ox
 test.pkipath application/pkix-pkipath ox
+test.sav application/x-spss-sav
+test.por application/x-spss-por
