@@ -1,0 +1,7 @@
+ASCII SPSS PORT FILE                    ASCII SPSS PORT FILE                    
+ASCII SPSS PORT FILE                    ASCII SPSS PORT FILE                    
+ASCII SPSS PORT FILE                    0000000000000000000000000000000000000000
+0000000000000000000000000123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrst
+uvwxyz .<(+|&[]!$*);^-/|,%_>?`:$@'="000000~-0000123456789000-()0{}\0000000000000
+00000000000000000000000000000000000000000000000000000000SPSSPORTA8/200903246/075
+1531E/GNU pspp 0.7.23H/i686-pc-linux-gnu41/5B/70/1/X5/1/0/5/1/0/F1/ZZZZZZZZZZZZZ
